--- a/RealityIsUnreal/Config/DefaultGame.ini
+++ b/RealityIsUnreal/Config/DefaultGame.ini
@@ -1,4 +1,3 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=7F200F3F4A0691606F2108AA5CC78510
-ProjectName=Puzzle BP Game Template
-
+ProjectID=09F2F75447166EA66FE96EBE44B7B1AE
+ProjectName=First Person BP Game Template
