--- a/RealityIsUnreal/Config/DefaultGame.ini
+++ b/RealityIsUnreal/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=09F2F75447166EA66FE96EBE44B7B1AE
 ProjectName=First Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BlueprintNativizationMethod=Inclusive
+
