--- a/RealityIsUnreal/Config/DefaultEngine.ini
+++ b/RealityIsUnreal/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/FirstPersonBP/Maps/FinalMap_persistent.FinalMap_persistent
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -32,6 +32,10 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -77,7 +81,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
-r.DefaultFeature.MotionBlur=False
