--- a/RealityIsUnreal/Config/DefaultGame.ini
+++ b/RealityIsUnreal/Config/DefaultGame.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=09F2F75447166EA66FE96EBE44B7B1AE
-ProjectName=First Person BP Game Template
+ProjectName=ShapeShifter
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "73FB1F82462441F990EE4589CBC1DC27", "Shapeshifter")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BlueprintNativizationMethod=Inclusive
-
