--- a/RealityIsUnreal/Config/DefaultEngine.ini
+++ b/RealityIsUnreal/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/FirstPersonBP/Maps/FinalMap_persistent.FinalMap_persistent
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
