kp post build stuff

--- a/RealityIsUnreal/Config/DefaultGame.ini
+++ b/RealityIsUnreal/Config/DefaultGame.ini
@@ -4,4 +4,6 @@ ProjectName=ShapeShifter
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "73FB1F82462441F990EE4589CBC1DC27", "Shapeshifter")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BlueprintNativizationMethod=Inclusive
+BlueprintNativizationMethod=Disabled
+FullRebuild=True
+
